--- a/blog/llm_extensibility.mdx
+++ b/blog/llm_extensibility.mdx
@@ -1,6 +1,6 @@
 ---
 slug: llm_extensibility
-title: "LLM Extensibility: Unifying Brands, Developers, and AI Surfaces"
+title: "LLM Extensibility 101: What is LLM Extensibility?"
 authors: [jkatz, aham]
 date: 2025-01-28
 descripion: What is LLM Extensibility? Learn how devs, brands, and AI surfaces unify their workflows for real-time, reliable AI—without fragmented code or docs.
@@ -9,7 +9,7 @@ keywords: [LLM Extensibility]
 ---
 
 <head>
-  <title>Layer AI Blog | What Is LLM Extensibility?</title>
+  <title>Layer AI Blog | LLM Extensibility 101: What is LLM Extensibility?</title>
 </head>
 
 import Tabs from '@theme/Tabs';
