Added meta tags to blog for Linkedin

--- a/blog/llm_extensibility.mdx
+++ b/blog/llm_extensibility.mdx
@@ -10,6 +10,9 @@ keywords: [LLM Extensibility]
 
 <head>
   <title>Layer AI Blog | LLM Extensibility 101: What is LLM Extensibility?</title>
+  <meta name="title" property="og:title" content="Layer AI Blog | LLM Extensibility 101: What is LLM Extensibility?">
+  <meta name="image" property="og:image" content="https://storage.googleapis.com/generic-assets/blog-static-assets/llm_extensibility_og_image.png">
+  <meta name="author" content="Jonah Katz, Andrew Hamilton">
 </head>
 
 import Tabs from '@theme/Tabs';
