--- a/blog/llm_extensibility.mdx
+++ b/blog/llm_extensibility.mdx
@@ -1,6 +1,6 @@
 ---
 slug: llm_extensibility
-title: "LLM Extensibility 101: What is LLM Extensibility?"
+title: "LLM Extensibility 101"
 authors: [jkatz, aham]
 date: 2025-01-28
 descripion: What is LLM Extensibility? Learn how devs, brands, and AI surfaces unify their workflows for real-time, reliable AI—without fragmented code or docs.
@@ -9,8 +9,8 @@ keywords: [LLM Extensibility]
 ---
 
 <head>
-  <title>Layer AI Blog | LLM Extensibility 101: What is LLM Extensibility?</title>
-  <meta name="title" property="og:title" content="Layer AI Blog | LLM Extensibility 101: What is LLM Extensibility?"></meta>
+  <title>Layer AI Blog | LLM Extensibility 101</title>
+  <meta name="title" property="og:title" content="Layer AI Blog | LLM Extensibility 101"></meta>
   <meta name="image" property="og:image" content="https://storage.googleapis.com/generic-assets/blog-static-assets/llm_extensibility_og_image.png"></meta>
   <meta name="author" content="Jonah Katz, Andrew Hamilton"></meta>
 </head>
