Removed extra quote from blog

--- a/blog/llm_extensibility_vital_to_api_vendors.mdx
+++ b/blog/llm_extensibility_vital_to_api_vendors.mdx
@@ -51,7 +51,7 @@ It’s true that modern LLMs can browse the web or parse PDFs. But that approach
 
 When it comes to AI, precision, security, and brand consistency are all major concerns. If the AI is making up endpoints or exposing them incorrectly, you could end up with errors, breaches, or a damaged reputation. According to [OpenAI’s Actions Introduction](https://platform.openai.com/docs/actions/introduction), controlling the scope and validity of AI calls is crucial for ensuring safety and correctness. By exposing your API to AI agents  through LLM extensions, you embed the logic, security parameters, and approved language right into the AI environment—a structured handshake rather than a free-for-all.
 
-## AI Agents as the New Interface"
+## AI Agents as the New Interface
 
 We’re used to spinning up a dashboard or CLI when we need to create a database, trigger a payment, or update user data. But the future points to AI as a command center for handling multiple APIs in one interface. Instead of visiting Stripe or Plaid’s website, you might simply say, “Create a new subscription tier for User ID #123,” and let the AI Agent take care of the details. This unification is no longer science fiction. GitHub Copilot offers chat-based coding assistance integrated into your IDE, while startups like Bolt and Lovable are building agentic platforms that can run code, call APIs, and orchestrate tasks on your behalf.
 
