Added new blog post

--- a/blog/layer_neon_copilot_extension.mdx
+++ b/blog/layer_neon_copilot_extension.mdx
@@ -3,7 +3,7 @@ slug: layer_neon_copilot_extension
 title: "How Layer Built Neon’s Copilot Extension"
 authors: [aham]
 date: 2025-02-20
-descripion: This blog blog demonstrates how Layer created a GitHub Copilot extension for Neon, a serverless, open-source PostgreSQL database. We build Copilot extensions (and other AI integrations) for companies that want to embrace AI Agents in their go-to-market process. If you’d like to see how we can help, read on—or book a demo to learn more
+description: This blog demonstrates how Layer created a GitHub Copilot extension for Neon, a serverless, open-source PostgreSQL database. We build Copilot extensions (and other AI integrations) for companies that want to embrace AI Agents in their go-to-market process. If you’d like to see how we can help, read on—or book a demo to learn more
 tags: [LLM Extensibility, API, Developer Experience (DX), Agent Experience (AX), GitHub Copilot, Neon]
 keywords: [LLM Extensibility, API, Developer Experience (DX), Agent Experience (AX), GitHub Copilot, Neon]
 ---
