Updated image for AI GTM Blog

--- a/blog/ai_gtm.mdx
+++ b/blog/ai_gtm.mdx
@@ -6,6 +6,7 @@ date: 2025-02-25
 description: Discover how AI agents are reshaping the go-to-market strategy for APIs. Learn why making your API agent-friendly with AI-powered tools like GitHub Copilot and prompt-to-app builders is crucial for reaching new users and driving adoption.
 tags: [AI Go-to-Market, LLM Extensibility, API, Developer Experience (DX), Agent Experience (AX), AI Agents]
 keywords: [AI Go-to-Market, LLM Extensibility, API, Developer Experience (DX), Agent Experience (AX), AI Agents]
+image: https://storage.googleapis.com/generic-assets/blog-static-assets/ai_gtm.png
 ---
 
 <head>
