--- a/blog/llm_extensibility_vital_to_api_vendors.mdx
+++ b/blog/llm_extensibility_vital_to_api_vendors.mdx
@@ -6,12 +6,11 @@ date: 2025-02-13
 descripion: Learn why it's important for API vendors to invest in an LLM Extensibility strategy to ensure their products stay relevant and accessible in a post-AI-Agent era.
 tags: [LLM Extensibility, API, Developer Experience (DX), Agent Experience (AX)]
 keywords: [LLM Extensibility, API, Developer Experience (DX), Agent Experience (AX)]
+image: https://storage.googleapis.com/generic-assets/blog-static-assets/llm_extensibility_vital_og_image.png
 ---
 
 <head>
   <title>Layer AI Blog | Why LLM Extensibility is Vital to API Vendors</title>
-  <meta name="title" property="og:title" content="Layer AI Blog | Why LLM Extensibility is Vital to API Vendors"></meta>
-  <meta name="image" property="og:image" content="https://storage.googleapis.com/generic-assets/blog-static-assets/llm_extensibility_vital_og_image.png"></meta>
   <meta name="author" content="Jonah Katz, Andrew Hamilton"></meta>
 </head>
 
