Fix image issue

--- a/blog/llm_extensibility.mdx
+++ b/blog/llm_extensibility.mdx
@@ -6,7 +6,7 @@ date: 2025-01-28
 descripion: What is LLM Extensibility? Learn how devs, brands, and AI surfaces unify their workflows for real-time, reliable AI—without fragmented code or docs.
 tags: [LLM Extensibility]
 keywords: [LLM Extensibility]
-https://storage.googleapis.com/generic-assets/blog-static-assets/llm_extensibility_og_image.png
+image: https://storage.googleapis.com/generic-assets/blog-static-assets/llm_extensibility_og_image.png
 ---
 
 <head>
