Hopefully actually works this time

--- a/blog/layer_neon_copilot_extension.mdx
+++ b/blog/layer_neon_copilot_extension.mdx
@@ -1,4 +1,5 @@
 ---
+id: layer_neon_copilot_extension
 slug: layer_neon_copilot_extension
 title: "How Layer Built Neon’s Copilot Extension"
 authors: [aham]
@@ -10,6 +11,7 @@ keywords: [LLM Extensibility, API, Developer Experience (DX), Agent Experience (
 
 <head>
   <title>Layer AI Blog | How Layer Built Neon’s Copilot Extension</title>
+  <meta name="title" property="og:title" content="Layer AI Blog | How Layer Built Neon’s Copilot Extension"></meta>
   <meta name="author" content="Andrew Hamilton"></meta>
 </head>
 
