--- a/blog/llm_extensibility.mdx
+++ b/blog/llm_extensibility.mdx
@@ -1,4 +1,5 @@
 ---
+id: llm_extensibility
 slug: llm_extensibility
 title: "LLM Extensibility 101"
 authors: [jkatz, aham]
@@ -11,6 +12,8 @@ image: https://storage.googleapis.com/generic-assets/blog-static-assets/llm_exte
 
 <head>
   <title>Layer AI Blog | LLM Extensibility 101</title>
+  <meta name="title" property="og:title" content="Layer AI Blog | LLM Extensibility 101"></meta>
+  <meta name="image" property="og:image" content="https://storage.googleapis.com/generic-assets/blog-static-assets/llm_extensibility_og_image.png"></meta>
   <meta name="author" content="Jonah Katz, Andrew Hamilton"></meta>
 </head>
 
