--- a/blog/ai_gtm.mdx
+++ b/blog/ai_gtm.mdx
@@ -1,4 +1,5 @@
 ---
+id: ai_gtm
 slug: ai_gtm
 title: "AI Go-To-Market: Why Agents Are Your Newest Path to Adoption"
 authors: [jkatz]
@@ -11,6 +12,8 @@ image: https://storage.googleapis.com/generic-assets/blog-static-assets/ai_gtm.p
 
 <head>
   <title>Layer AI Blog | AI Go-To-Market: Why Agents Are Your Newest Path to Adoption</title>
+  <meta name="title" property="og:title" content="Layer AI Blog | AI Go-To-Market: Why Agents Are Your Newest Path to Adoption" />
+  <meta name="image" property="og:image" content="https://storage.googleapis.com/generic-assets/blog-static-assets/ai_gtm.png" />
   <meta name="author" content="Jonah Katz" />
 </head>
 
