--- a/blog/dry_with_api_flask.mdx
+++ b/blog/dry_with_api_flask.mdx
@@ -1,4 +1,5 @@
 ---
+id: dry_with_api_flask
 slug: dry_with_api_flask
 title: Keep Your Data DRY with APIFlask
 authors: [gpart, lgis, aham]
@@ -6,6 +7,12 @@ date: 2024-12-20
 descripion: Lead by Gavyn, Co-authored by Lucas and Andrew
 tags: [DRY, APIFlask, SQLAlchemy, Marshmallow, OneOfSchema]
 ---
+
+<head>
+  <title>Layer AI Blog | Keep Your Data DRY with APIFlask</title>
+  <meta name="title" property="og:title" content="Layer AI Blog | Keep Your Data DRY with APIFlask"></meta>
+</head>
+
 <small>
 **Lead Author:** Gavyn<br/>
 **Co-Authors:** Lucas, Andrew<br/>
