--- a/blog/llm_extensibility_vital_to_api_vendors.mdx
+++ b/blog/llm_extensibility_vital_to_api_vendors.mdx
@@ -1,4 +1,5 @@
 ---
+id: llm_extensibility_vital_to_api_vendors
 slug: llm_extensibility_vital_to_api_vendors
 title: "Why LLM Extensibility is Vital to API Vendors"
 authors: [jkatz, aham]
@@ -11,6 +12,8 @@ image: https://storage.googleapis.com/generic-assets/blog-static-assets/llm_exte
 
 <head>
   <title>Layer AI Blog | Why LLM Extensibility is Vital to API Vendors</title>
+  <meta name="title" property="og:title" content="Layer AI Blog | Why LLM Extensibility is Vital to API Vendors"></meta>
+  <meta name="image" property="og:image" content="https://storage.googleapis.com/generic-assets/blog-static-assets/llm_extensibility_vital_og_image.png"></meta>
   <meta name="author" content="Jonah Katz, Andrew Hamilton"></meta>
 </head>
 
