Last attempt at this

--- a/blog/ai_gtm.mdx
+++ b/blog/ai_gtm.mdx
@@ -7,14 +7,12 @@ date: 2025-02-25
 description: Discover how AI agents are reshaping the go-to-market strategy for APIs. Learn why making your API agent-friendly with AI-powered tools like GitHub Copilot and prompt-to-app builders is crucial for reaching new users and driving adoption.
 tags: [AI Go-to-Market, LLM Extensibility, API, Developer Experience (DX), Agent Experience (AX), AI Agents]
 keywords: [AI Go-to-Market, LLM Extensibility, API, Developer Experience (DX), Agent Experience (AX), AI Agents]
-image: https://storage.googleapis.com/generic-assets/blog-static-assets/ai_gtm.png
 ---
 
 <head>
   <title>Layer AI Blog | AI Go-To-Market: Why Agents Are Your Newest Path to Adoption</title>
-  <meta name="title" property="og:title" content="Layer AI Blog | AI Go-To-Market: Why Agents Are Your Newest Path to Adoption" />
-  <meta name="image" property="og:image" content="https://storage.googleapis.com/generic-assets/blog-static-assets/ai_gtm.png" />
-  <meta name="author" content="Jonah Katz" />
+  <meta property="og:title" content="Layer AI Blog | AI Go-To-Market: Why Agents Are Your Newest Path to Adoption" />
+  <meta property="og:image" content="https://storage.googleapis.com/generic-assets/blog-static-assets/ai_gtm.png" />
 </head>
 
 For years I’ve seen companies zeroing in on **developer experience**—crafting better docs, building language-specific SDKs, reducing friction in signups. But now, the biggest shift I’m seeing isn’t just about developers; it’s about AI. If you have an API or dev tool, it’s no longer humans alone reading your docs or signing up on your dashboard.
