--- a/blog/layer_neon_copilot_extension.mdx
+++ b/blog/layer_neon_copilot_extension.mdx
@@ -11,8 +11,7 @@ keywords: [LLM Extensibility, API, Developer Experience (DX), Agent Experience (
 
 <head>
   <title>Layer AI Blog | How Layer Built Neon’s Copilot Extension</title>
-  <meta name="title" property="og:title" content="Layer AI Blog | How Layer Built Neon’s Copilot Extension"></meta>
-  <meta name="author" content="Andrew Hamilton"></meta>
+  <meta property="og:title" content="Layer AI Blog | How Layer Built Neon’s Copilot Extension"></meta>
 </head>
 
 _The following blog demonstrates how Layer created a GitHub Copilot extension for [Neon](https://neon.tech/), a serverless, open-source PostgreSQL database. We build Copilot extensions (and other AI integrations) for companies that want to embrace AI Agents in their go-to-market process. If you’d like to see how we can help, read on—or [book a demo](https://cal.com/team/layer/demo) to learn more._
