--- a/blog/llm_extensibility.mdx
+++ b/blog/llm_extensibility.mdx
@@ -7,14 +7,12 @@ date: 2025-01-28
 descripion: What is LLM Extensibility? Learn how devs, brands, and AI surfaces unify their workflows for real-time, reliable AI—without fragmented code or docs.
 tags: [LLM Extensibility]
 keywords: [LLM Extensibility]
-image: https://storage.googleapis.com/generic-assets/blog-static-assets/llm_extensibility_og_image.png
 ---
 
 <head>
   <title>Layer AI Blog | LLM Extensibility 101</title>
-  <meta name="title" property="og:title" content="Layer AI Blog | LLM Extensibility 101"></meta>
-  <meta name="image" property="og:image" content="https://storage.googleapis.com/generic-assets/blog-static-assets/llm_extensibility_og_image.png"></meta>
-  <meta name="author" content="Jonah Katz, Andrew Hamilton"></meta>
+  <meta property="og:title" content="Layer AI Blog | LLM Extensibility 101"></meta>
+  <meta property="og:image" content="https://storage.googleapis.com/generic-assets/blog-static-assets/llm_extensibility_og_image.png"></meta>
 </head>
 
 import Tabs from '@theme/Tabs';
