Remove technical diagram placeholder

--- a/blog/vscode_grubhub_extension.mdx
+++ b/blog/vscode_grubhub_extension.mdx
@@ -21,9 +21,7 @@ Are you ever so in the sigma developer grindset so hard that you forget to eat? 
 
 ## Where do we start? 
 
-Lets look at the sophisticated technical architecture I will be using to accomplish this feat of engineering. Here is the technical diagram:
-
-TODO: Techincal diagram
+Lets look at the sophisticated technical architecture I will be using to accomplish this feat of engineering.
 
 Here is the flow:
 1. **VSCode Chat API:** Developer asks copilot to "Order lunch"
