--- a/blog/vscode_grubhub_extension.mdx
+++ b/blog/vscode_grubhub_extension.mdx
@@ -4,24 +4,23 @@ slug: vscode_grubhub_extension
 title: "Building a VSCode Chat Extension to Order Me Cheeseburgers"
 authors: [aham]
 date: 2025-02-27
-description: Discover how AI agents are reshaping the go-to-market strategy for APIs. Learn why making your API agent-friendly with AI-powered tools like GitHub Copilot and prompt-to-app builders is crucial for reaching new users and driving adoption.
-tags: [AI Go-to-Market, LLM Extensibility, API, Developer Experience (DX), Agent Experience (AX), AI Agents]
-keywords: [AI Go-to-Market, LLM Extensibility, API, Developer Experience (DX), Agent Experience (AX), AI Agents]
+description: I built a VS Code chat extension that orders food from Grubhub using AI-driven API calls. Follow along as I reverse-engineer Grubhub’s API, integrate it with VS Code, and accidentally order myself a cheeseburger in the process.
+tags: [LLM Extensibility, API, Developer Experience (DX), Agent Experience (AX), AI Agents, VS Code, Grubhub]
+keywords: [LLM Extensibility, API, Developer Experience (DX), Agent Experience (AX), AI Agents, VS Code, Grubhub]
 ---
 
 <head>
   <title>Layer AI Blog | Building a VSCode Chat Extension to Order Me Cheeseburgers</title>
   <meta property="og:title" content="Layer AI Blog | Building a VSCode Chat Extension to Order Me Cheeseburgers" />
-  <meta property="og:image" content="UPDATE THIS" />
 </head>
 
-Are you ever so in the sigma developer grindset so hard that you forget to eat? Me neither. But like most VC backed companies, I will attempted to solve a problem that does not exist! In the process I hope you learn how to waste time as well as me while still getting paid.
+Are you ever in the sigma developer grindset so hard that you forget to eat? Me neither. But like most VC backed companies, I will attempt to solve a problem that does not exist! In the process I hope you learn how to waste time as well as me while still getting paid.
 
 ![Burger](./assets/vscode_grubhub_extension/burger.webp)
 
 ## Where do we start? 
 
-Lets look at the sophisticated technical architecture I will be using to accomplish this feat of engineering.
+Let's look at the sophisticated technical architecture I will be using to accomplish this feat of engineering.
 
 Here is the flow:
 1. **VSCode Chat API:** Developer asks copilot to "Order lunch"
@@ -29,15 +28,15 @@ Here is the flow:
 3. **Copilot Responds:** Copilot will list options from the restaurant for what they can order
 4. **Developer responds:** "Cheeseburger"
 5. **LLM Determines tool Calls:** ORDER_LUNCH_ITEM
-6. **Copilot Responds:** "Your cheeseburger had been ordered sir"
+6. **Copilot Responds:** "Your cheeseburger has been ordered sir"
 
 ## Reverse Engineering Grubhub API like a Sigma Developer
 
-At first I wanted to use Doordash, but they use server-side rendering to display their menus which would make our jobs real hard.  So I settled on using Grubhub instead (and may I just say, this was the correct choice).  Now Grubhub doesn't have an api to order food from that is public (they do have this [api](https://developer.grubhub.com/), but this is for merchants of which I am not), so we need to reverse engineer the api.  To do this I used Chrome Dev Tools & [Postman Interceptor](https://chromewebstore.google.com/detail/postman-interceptor/aicmkgpgakddgnaphhhpliifpcfhicfo?hl=en).  
+At first I wanted to use Doordash, but they use server-side rendering to display their menus which would make our jobs real hard.  So I settled on using Grubhub instead (and may I just say, this was the correct choice).  Now Grubhub doesn't have a public api for ordering food (they do have this [api](https://developer.grubhub.com/), but this is for merchants of which I am not), so we need to reverse engineer the api.  To do this I used Chrome Dev Tools & [Postman Interceptor](https://chromewebstore.google.com/detail/postman-interceptor/aicmkgpgakddgnaphhhpliifpcfhicfo?hl=en).  
 
 ### My first "accidental" cheeseburger
 
-In order to intercept all the requests I needed to revere engineer the API, I needed to place an order.  So with my postman interceptor listening and the company card details ready, I walked through the checkout process and clicked "Submit".  Suddenly hundreds of requests poured out of my computer as my credit card information was sent to the Grubhub servers. I then rapidly tried to cancel the order, but it was too late, it arrived at my house 30 minutes later.  Here it is in its full glory:
+In order to intercept all the requests, I needed to reverse engineer the API, I needed to place an order.  So with my postman interceptor listening and the company card details ready, I walked through the checkout process and clicked "Submit".  Suddenly hundreds of requests poured out of my computer as my credit card information was sent to the Grubhub servers. I then rapidly tried to cancel the order, but it was too late, it arrived at my house 30 minutes later.  Here it is in its full glory:
 ```
                             |\ /| /|_/|
                           |\||-|\||-/|/|
@@ -57,7 +56,7 @@ I forgot to take a picture, enjoy this ascii art
 
 
 
-The burger was as good as I had imagined it would be, especially since I didn't need to pay for it. But more importantly, I had all the request information I needed to start the reverse engineering.  All in all it took me about 8 hours to distill only the nessesary requests for placing and order. I found it only takes 4 POST and 1 PUT request on Grubhub to make an order.  To save you all the time, here they are:
+The burger was as good as I had imagined it would be, especially since I didn't need to pay for it. But more importantly, I had all the request information I needed to start the reverse engineering.  All in all it took me about 8 hours to distill only the necesary requests for placing and order. I found it only takes 4 POST and 1 PUT request on Grubhub to make an order.  To save you all the time, here they are:
 
 1. **POST `/carts`:** This route creates a new cart on the user's account
 2. **POST `/carts/{cart_id}/lines`:** This allows us to add an item to the cart we just created
@@ -65,11 +64,11 @@ The burger was as good as I had imagined it would be, especially since I didn't 
 4. **POST `/carts/{cart_id}/payments`:** This attaches a payment method to the cart
 5. **POST `/carts/{cart_id}/checkout`:** This places the order
 
-Honestly, looking at it now, I am a bit disappointed this took me 8 hours to figure out.  Now there are a few more routes we are going to add to make the VSCode checkout experience smoother, but these 5 routes are all you need to place an order using the Grubhub.  You can find them in this postman collection if you are interested (nerd).
+Honestly, looking at it now, I am a bit disappointed that this took me 8 hours to figure out.  Now there are a few more routes we are going to add to make the VSCode checkout experience smoother, but these 5 routes are all you need to place an order using the Grubhub API.  You can find them in this postman collection if you are interested (nerd).
 
 ## VSCode Extension
 
-So what next?  Well this header says "VSCode Extension", so I guess we can talk about that.  VSCode extensions are a bunch of Typescript accessing bunch of [APIs](https://code.visualstudio.com/api/get-started/your-first-extension).  You can actually start one with a single command here:
+So what next?  Well this header says "VSCode Extension", so I guess we can talk about that.  VSCode extensions are a bunch of TypeScript accessing a bunch of [APIs](https://code.visualstudio.com/api/get-started/your-first-extension).  You can actually start one with a single command here:
 
 ```
 npx --package yo --package generator-code -- yo code`
@@ -83,7 +82,7 @@ Let us step back for a moment and take a look at the full project structure:
 
 If you take a close look at the diagram, you can see there are two parts to our extension.  The stuff that VSCode requires for us to render a participant. And the stuff required to call the tools / use the LLM.  For the former, I will refer you to these [docs](https://code.visualstudio.com/api/extension-guides/chat-tutorial) as they are pretty good.  The latter will be what I focus this blogpost on.
 
-### How do we call and API with an LLM?
+### How do we call an API with an LLM?
 
 So function calling basically works like this:
 
@@ -124,7 +123,7 @@ Here is an example of one of the tool schemas for `/get_restaurant_items`:
 This response it easy to parse with `JSON.loads()` and then can be validated with something like zod or pydantic to ensure it is correct.  These tool schemas are declared in the `package.json` file in the extension which you can find [here](https://github.com/andrewlayer/grubhub/blob/main/package.json)!
 
 ### Function Calling ☎️
-So now that we have our JSON, we need to use it to invoke a function. In the case of calling an API endpoint, that mean we need to take our parameters and shove them into javascript `fetch`.  Here is how we got that done for `/get_restaurant_items`:
+So now that we have our JSON, we need to use it to invoke a function. In the case of calling an API endpoint, that means we need to take our parameters and shove them into javascript `fetch`.  Here is how we got that done for `/get_restaurant_items`:
 
 ```typescript
 export class GetRestaurantItemsTool implements vscode.LanguageModelTool<GetRestaurantItemsParameters> {
@@ -162,7 +161,7 @@ In the code above, we implement the `vscode.LanguageModelTool` class which requi
 const res = await grubhubClient.getRestaurantItems(options.input.restaurant_id);
 ```
 
-You can see we get the restaurant ID.  You might be asking, "but sir 🧐 how did you parse the JSON?".  Well you see, by implementing the language model tool class, this is done automatically for me as long as I provide a JSON schema!
+You can see we get the restaurant ID.  You might be asking, "but sir 🧐 how did you parse the JSON?".  Well, you see, by implementing the language model tool class, this is done automatically for me as long as I provide a JSON schema!
 
 ## Workflows (a quick aside)
 Now in order to make any agentic experience nice, you really need workflows.  Why is this, well let me show you a hypothetical conversation and see if you understand:
