Minor blog changes

--- a/blog/vscode_grubhub_extension.mdx
+++ b/blog/vscode_grubhub_extension.mdx
@@ -65,7 +65,7 @@ The burger was as good as I had imagined it would be, especially since it was on
 4. **POST `/carts/{cart_id}/payments`:** This attaches a payment method to the cart
 5. **POST `/carts/{cart_id}/checkout`:** This places the order
 
-Honestly, looking at it now, I am a bit disappointed that this took me 8 hours to figure out.  Now there are a few more routes we are going to add to make the VSCode checkout experience smoother, but these 5 routes are all you need to place an order using the Grubhub API.  You can find them in this postman collection if you are interested (nerd).
+Honestly, looking at it now, I am a bit disappointed that this took me 8 hours to figure out.  Now there are a few more routes we are going to add to make the VSCode checkout experience smoother, but these 5 routes are all you need to place an order using the Grubhub API.
 
 ## VSCode Extension
 
@@ -212,7 +212,7 @@ Now in order to make any agentic experience nice, you really need workflows.  *W
 
 The above conversation is the actual flow of API calls required for Copilot to list restaurants for Grubhub (moderately dramatized). This obviously isn't very user friendly. You see, most APIs our of the box are not ready to be used by AI agents because they provide bad UX and require additional information that us as users (and LLMs) don't care about.  Thus we must clean and simplify the API
 
-So how can we accomplish these workflow. Well in this project, I hardcode them all.  But if you are interested in effortlessly cleaning your API for agents to use effectively... Allow me to introduce you to [Layer.](https://buildwithlayer.com/).
+So how can we accomplish these workflow. Well in this project, I hardcode them all.  But if you are interested in effortlessly cleaning your API for agents to use effectively... Allow me to shill you my product: [Layer.](https://buildwithlayer.com/).
 
 ## Gosh are we done yet?
 For the most part, yes. But don't you want to order some food? 
